@@ -18,6 +18,7 @@ const Transition = ({
   className,
   duration,
   children,
+  label,
 }) => (
   <CSSTransitionGroup
     component={component}
@@ -25,6 +26,7 @@ const Transition = ({
     transitionLeaveTimeout={duration}
     transitionName={`c-transition-${name}`}
     className={className}
+    aria-label={label}
   >
     {children}
   </CSSTransitionGroup>
@@ -36,6 +38,7 @@ Transition.propTypes = {
   className: PropTypes.string,
   duration: PropTypes.number,
   children: PropTypes.node,
+  label: PropTypes.string,
 };
 
 Transition.defaultProps = {
@@ -43,6 +46,7 @@ Transition.defaultProps = {
   children: null,
   className: null,
   duration: TRANSITION_DURATION,
+  label: null,
 };
 
 export default Transition;
